# fridge

./: .gitignore  Cargo.toml  README.md  build.rs
src/: command.rs  command_parser.rs  database.rs  main.rs  server.rs  wal.proto  wal.rs
src/wal/: error.rs  mod.rs
