[package]
name = "fridge"
version = "0.1.0"
authors = ["Yusuke Nojima <nojima@ynojima.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.5"
byteorder = "1.2"
crc = "^1.0.0"
protobuf = { version = "~2.0", features = ["with-bytes"] }

[build-dependencies]
protoc-rust = "2.0"