[package]
name = "fridge"
version = "0.1.0"
authors = ["Yusuke Nojima <nojima@ynojima.com>"]

[dependencies]
byteorder = "1.2"
crc = "^1.0.0"
env_logger = "0.5"
failure = "0.1.3"
failure_derive = "0.1.2"
log = "0.4"
protobuf = { version = "~2.0", features = ["with-bytes"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
protoc-rust = "2.0"